--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ project(AIS4104-assignments)
 set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(assignment-1)
-add_subdirectory(Session_1)
+add_subdirectory(assignment-2)
 
