task3 from class, and made the math cmake code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(assignment-1)
 add_subdirectory(assignment-2)
+add_subdirectory(assignment-3)
+add_subdirectory(math)
 
