--- a/assignment-1/CMakeLists.txt
+++ b/assignment-1/CMakeLists.txt
@@ -1,6 +1,6 @@
 find_package(Eigen3 CONFIG REQUIRED)
 
-add_executable(test main.cpp
-        ../assignment-2/main.cpp)
+add_executable(assignment1 main.cpp)
 
-target_link_libraries(test PRIVATE Eigen3::Eigen)
+target_link_libraries(assignment1 PRIVATE Eigen3::Eigen)
+target_link_libraries(assignment1 PRIVATE math)
