--- a/assignment-2/CMakeLists.txt
+++ b/assignment-2/CMakeLists.txt
@@ -1,5 +1,7 @@
 find_package(Eigen3 CONFIG REQUIRED)
 
-add_executable(session_1 main.cpp)
+add_executable(assignment2 main.cpp
+        ../assignment-1/main.cpp
+        ../math/include/math/math.h)
 
-target_link_libraries(session_1 PRIVATE Eigen3::Eigen)
+target_link_libraries(assignment2 PRIVATE Eigen3::Eigen)
