Flyttet universale funskjoner fra øving1 til math

--- a/math/CMakeLists.txt
+++ b/math/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(Eigen3 CONFIG REQUIRED)
 
-add_library(math STATIC
+add_library(math
         math.cpp
         include/math/math.h)
 
-target_include_directories(math PUBLIC include/math/math.h)
+target_link_libraries(math PRIVATE Eigen3::Eigen)
