half of task 2 is moved to math

--- a/assignment-2/CMakeLists.txt
+++ b/assignment-2/CMakeLists.txt
@@ -1,7 +1,6 @@
 find_package(Eigen3 CONFIG REQUIRED)
 
-add_executable(assignment2 main.cpp
-        ../assignment-1/main.cpp
-        ../math/include/math/math.h)
+add_executable(assignment2 main.cpp)
 
 target_link_libraries(assignment2 PRIVATE Eigen3::Eigen)
+target_link_libraries(assignment2 PRIVATE math)
