started on assignment3

--- a/assignment-3/CMakeLists.txt
+++ b/assignment-3/CMakeLists.txt
@@ -1,7 +1,6 @@
 find_package(Eigen3 CONFIG REQUIRED)
 
-add_executable(assignment3 main.cpp
-        ../assignment-3/main.cpp
-        ../math/include/math/math.h)
+add_executable(assignment3 main.cpp)
 
 target_link_libraries(assignment3 PRIVATE Eigen3::Eigen)
+target_link_libraries(assignment3 PRIVATE math)
